Fix v2 for Search bar Moving Up on small screen devices

--- a/edgarapp/static/css/filing-detail-styles.css
+++ b/edgarapp/static/css/filing-detail-styles.css
@@ -270,6 +270,9 @@
 
 
 }
+#myInputautocomplete-list div:nth-child(1){
+    background-color:#f2e6d9;
+}
 #myInputautocomplete-list div{
     font-family:Tahoma,Geneva,sans-serif;
    padding:5px 20px;
@@ -330,7 +333,7 @@
     }
 .part-link{
      margin-top:10px;
-   
+
  }
  #table_filing .note-link{
         padding-left: 30px;
@@ -445,12 +448,12 @@
     #filings-section-list tbody tr:first-child{
         color:black;
          background-color:#f3e5d8;
-        
+
     }
     .filedate:hover{
       background-color:#d8ecf3;
     }
-  
+
     #search-icon{
         font-size:1.8em;
         font-weight:bolder;
@@ -460,9 +463,7 @@
         -o-transform: rotate(45deg);
         transform: rotate(45deg);
     }
-   #smallsearchbar{
-    display:none;
-   }
+
     #searchform{
    position:relative;
    top:1vh;
@@ -472,7 +473,8 @@
     font-size:x-small;
     min-width:100%;
     height:40px;
-
+    margin-bottom:8px;
+    border-bottom:1px solid black;
     }
 
     #myBtn{
@@ -497,8 +499,10 @@
         min-height:40px;
         max-height:40px;
          outline:none;
+         width:100%;
+         border-bottom:1px solid black;
     }
-  
+
 
 
     #filings-section-list #companyname{
@@ -512,7 +516,7 @@
     width:100%;
     padding:2px 0px;
 /*      background-color:#003366; */
-     margin-bottom:2px;
+
 
     }
        #buttons-file-sec button{
